phase-5/deploy/kubernetes/base/publisher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: publisher
  namespace: dapr-demo
  labels:
    app: publisher
    app.kubernetes.io/name: publisher
    app.kubernetes.io/part-of: dapr-demo
spec:
  selector:
    app: publisher
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  type: ClusterIP
